<resources>
    <string name="app_name">Pitch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="save">Save</string>
    <string name="take_a_photo">Take from Camera</string>
    <string name="gallery">Upload from Gallery</string>
    <string name="choose_media">Choose Media</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logoutMessage">Are you sure you wnt to logout?</string>
    <string name="name">Name</string>
    <string name="emails">E-mail</string>
    <string name="phone_no">Phone no.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot the password?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="enter_your_phone_no.">Enter your phone no.</string>
    <string name="enter_password">Enter password</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="please_enter_the_for_digit_otp">Please enter the 4 digit code sent to your registered mobile number</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="enter_your_registered_phone_number_to_retain_your_account">Enter your registered phone number to retain your account</string>
    <string name="send_otp">Send OTP</string>
    <string name="verified">Verified</string>
    <string name="yahh_you_have_successfully_verified_the_account">Yahh!! You have successfully verified the account</string>
    <string name="go_home">Go home</string>
    <string name="delete">Edit</string>
    <string name="confirm_password">Confirm  Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="search">Search</string>
    <string name="ideas">Ideas</string>
    <string name="balance">Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="money_withdrawal">Money Withdrawal</string>
    <string name="money_deposit">Money \nDeposit</string>
    <string name="process">Proceed</string>
    <string name="pay_money">Pay Money</string>
    <string name="add_money">Add Money...</string>
    <string name="gallery1">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="video_uploading">Video uploading...</string>
    <string name="add_project">Add Project</string>
    <string name="blog">Blogs</string>
    <string name="blog1">Blog</string>
    <string name="chats">Chats</string>
    <string name="chat">Chat</string>
    <string name="type_your_project_name">Type your project name...</string>
    <string name="project_name">Project Name</string>
    <string name="your_name">Your Name</string>
    <string name="type_your_name">Type your name.......</string>
    <string name="add_description">Add Description</string>
    <string name="type_your_description">Type your description.......</string>
    <string name="add_budget">Add Budget</string>
    <string name="type_your_budget">Type your budget.......</string>
    <string name="upload_banner">Upload Banner</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="done">Done</string>
    <string name="share_your_feedback">Share Your <font color="#E56214">Feedback!</font></string>
    <string name="share_your_feedback1">Thank you For Your <font color="#E56214">Feedback!</font></string>
    <string name="how_satisfied_are_you">How satisfied are you?</string>
    <string name="send">Send</string>
    <string name="add_your_comment_here">Add your comment here......</string>
    <string name="videos">Videos</string>
    <string name="about_project">About project</string>
    <string name="type_here">Type here.........</string>
    <string name="profile">Profile</string>
    <string name="your_details">Your Details</string>
    <string name="rate">Rate</string>
    <string name="checkInternet">Please check your Internet connection</string>
    <string name="notifications">Notifications</string>
</resources>