<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        tools:context=".ui.fragments.verified.VerifiedFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/twenty_margin"
            android:background="@drawable/verified_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_mark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/blackTextView"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/verified"
                android:textSize="@dimen/twenty_five"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle"
                style="@style/blackTextView"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/twenty_margin"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/yahh_you_have_successfully_verified_the_account"
                android:textColor="@color/black"
                android:textSize="@dimen/eleven"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnVerified"
                style="@style/button"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/go_home"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.4" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>